--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
  	height: auto;
  	border: 0px;
     border-radius: 0px;
-    box-shadow: 0px 2px 50px 2px rgba(0,0,0,0.10) }
+ }
 
 
 .navbar-header {
